src-tauri/check_errors_tauri2.txt
    Checking mic-mute-rs v0.1.0 (C:\Users\papop\Documents\MicMuteRs\src-tauri)
warning: unused import: `Deserialize`
 --> src-tauri\src\commands.rs:1:13
  |
1 | use serde::{Deserialize, Serialize};
  |             ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Mutex`
 --> src-tauri\src\commands.rs:2:22
  |
2 | use std::sync::{Arc, Mutex};
  |                      ^^^^^

warning: unused import: `utils`
 --> src-tauri\src\commands.rs:5:47
  |
5 | use crate::{AppState, audio, config, startup, utils};
  |                                               ^^^^^

error[E0382]: borrow of moved value: `state`
    --> src-tauri\src\lib.rs:289:33
     |
 193 |             let state = Arc::new(AppState {
     |                 ----- move occurs because `state` has type `Arc<AppState>`, which does not implement the `Copy` trait
...
 252 |             std::thread::spawn(move || {
     |                                ------- value moved into closure here
 253 |                 loop {
     |                 ---- inside of this loop
 254 |                     {
 255 |                         let st = state.config.lock().unwrap();
     |                                  ----- variable moved due to use in closure
...
 289 |                 let cfg_guard = state.config.lock().unwrap();
     |                                 ^^^^^ value borrowed here after move
     |
     = note: borrow occurs due to deref coercion to `AppState`
note: deref defined here
    --> C:\Users\papop\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\alloc\src\sync.rs:2418:5
     |
2418 |     type Target = T;
     |     ^^^^^^^^^^^
help: consider cloning the value before moving it into the closure
     |
 252 ~             let value = state.clone();
 253 ~             std::thread::spawn(move || {
 254 |                 loop {
 255 |                     {
 256 ~                         let st = value.config.lock().unwrap();
     |

For more information about this error, try `rustc --explain E0382`.
warning: `mic-mute-rs` (lib) generated 3 warnings
error: could not compile `mic-mute-rs` (lib) due to 1 previous error; 3 warnings emitted
